The client side changes that go with r503. Update issue 40.